Upgrading java to java 11 (java 13 in tests) (#405)
Upgrading Storm to 2.3.0
Supporting downloading http enrichment tables
Remove multiline string dependency