@@ -1,6 +1,5 @@
 package uk.co.gresearch.siembol.alerts.engine;
 
-import org.adrianwalker.multilinestring.Multiline;
 import org.apache.commons.lang3.tuple.Pair;
 import org.junit.Assert;
 import org.junit.Before;
@@ -17,14 +16,13 @@ import java.util.*;
 import static org.mockito.Mockito.when;
 
 public class AlertingEngineImplTest {
-    /**
-     *{"source_type" : "test_source", "dummy_field" : "true"}
-     */
-    @Multiline
-    public static String knownSourceType;
+    private final String knownSourceType = """
+            {   "source_type" : "test_source",
+                "dummy_field" : "true"
+            }
+            """;
 
-
-    private String sourceType = "test_source";
+    private final String sourceType = "test_source";
     private List<Pair<String, String>> constants;
     private List<Pair<String, Object>> protections;
     private List<Pair<String, Rule>> rules;
@@ -36,8 +34,8 @@ public class AlertingEngineImplTest {
 
     @Before
     public void setUp() {
-        constants = Arrays.asList(Pair.of("detection_source", "siembol_alerts"));
-        protections = Arrays.asList(Pair.of(AlertingFields.MAX_PER_HOUR_FIELD.getAlertingName(), Integer.valueOf(1)));
+        constants = List.of(Pair.of("detection_source", "siembol_alerts"));
+        protections = List.of(Pair.of(AlertingFields.MAX_PER_HOUR_FIELD.getAlertingName(), 1));
         rule1 = Mockito.mock(Rule.class);
         rule2 = Mockito.mock(Rule.class);
         resultRule1 = AlertingResult.fromEvaluationResult(EvaluationResult.MATCH, new HashMap<>());
@@ -46,10 +44,10 @@ public class AlertingEngineImplTest {
         when(rule1.getRuleName()).thenReturn("rule1");
         when(rule1.getFullRuleName()).thenReturn("rule1_v1");
 
-        when(rule1.match(ArgumentMatchers.<Map<String, Object>>any())).thenReturn(resultRule1);
+        when(rule1.match(ArgumentMatchers.any())).thenReturn(resultRule1);
         when(rule2.getRuleName()).thenReturn("rule2");
         when(rule2.getFullRuleName()).thenReturn("rule2_v1");
-        when(rule2.match(ArgumentMatchers.<Map<String, Object>>any())).thenReturn(resultRule2);
+        when(rule2.match(ArgumentMatchers.any())).thenReturn(resultRule2);
 
         rules = Arrays.asList(Pair.of(sourceType, rule1),
                 Pair.of("*", rule2));
@@ -69,15 +67,15 @@ public class AlertingEngineImplTest {
         Assert.assertEquals(AlertingResult.StatusCode.OK, ret.getStatusCode());
         Assert.assertEquals(EvaluationResult.MATCH, ret.getAttributes().getEvaluationResult());
         Assert.assertEquals(2, ret.getAttributes().getOutputEvents().size());
-        Assert.assertEquals("rule1", 
+        Assert.assertEquals("rule1",
                 ret.getAttributes().getOutputEvents().get(0).get("siembol_alerts_rule_name"));
         Assert.assertEquals("rule1_v1",
                 ret.getAttributes().getOutputEvents().get(0).get("siembol_alerts_full_rule_name"));
         Assert.assertEquals("siembol_alerts",
                 ret.getAttributes().getOutputEvents().get(0).get("detection_source"));
-        Assert.assertEquals(1, 
+        Assert.assertEquals(1,
                 ret.getAttributes().getOutputEvents().get(0).get("siembol_alerts_max_per_hour"));
-        Assert.assertEquals("rule2", 
+        Assert.assertEquals("rule2",
                 ret.getAttributes().getOutputEvents().get(1).get("siembol_alerts_rule_name"));
         Assert.assertEquals("rule2_v1",
                 ret.getAttributes().getOutputEvents().get(1).get("siembol_alerts_full_rule_name"));
@@ -104,19 +102,19 @@ public class AlertingEngineImplTest {
         Assert.assertEquals(AlertingResult.StatusCode.OK, ret.getStatusCode());
         Assert.assertEquals(EvaluationResult.MATCH, ret.getAttributes().getEvaluationResult());
         Assert.assertEquals(2, ret.getAttributes().getOutputEvents().size());
-        Assert.assertEquals("rule1", 
+        Assert.assertEquals("rule1",
                 ret.getAttributes().getOutputEvents().get(0).get("siembol_alerts_rule_name"));
         Assert.assertEquals("rule1_v1",
                 ret.getAttributes().getOutputEvents().get(0).get("siembol_alerts_full_rule_name"));
-        Assert.assertEquals("siembol_alerts", 
+        Assert.assertEquals("siembol_alerts",
                 ret.getAttributes().getOutputEvents().get(0).get("detection_source"));
-        Assert.assertEquals(1, 
+        Assert.assertEquals(1,
                 ret.getAttributes().getOutputEvents().get(0).get("siembol_alerts_max_per_hour"));
-        Assert.assertEquals("rule2", 
+        Assert.assertEquals("rule2",
                 ret.getAttributes().getOutputEvents().get(1).get("siembol_alerts_rule_name"));
         Assert.assertEquals("rule2_v1",
                 ret.getAttributes().getOutputEvents().get(1).get("siembol_alerts_full_rule_name"));
-        Assert.assertEquals("siembol_alerts", 
+        Assert.assertEquals("siembol_alerts",
                 ret.getAttributes().getOutputEvents().get(1).get("detection_source"));
         Assert.assertEquals(1,
                 ret.getAttributes().getOutputEvents().get(1).get("siembol_alerts_max_per_hour"));
@@ -179,7 +177,7 @@ public class AlertingEngineImplTest {
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void missingRules()  {
+    public void missingRules() {
         engine = new AlertingEngineImpl.Builder()
                 .constants(constants)
                 .protections(protections)
